<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.jarroba.navegarhaciaarriba.videos" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_deos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button$videos$videoA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/v_deo_a" />

    <Button
        android:id="@+id/button$videos$videoB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/v_deo_b" />

</LinearLayout>